# Cerebral-Cortex_CodeFest25_BadDebtGuard-AI

./: .gitignore  COMPARISON.md  CRITICAL_FIXES.md  DEVELOPMENT.md  OPENAI_INTEGRATION.md  ORGANIZATION.md  PROJECT_ANALYSIS.md  QUICK_START.md  README.md  SETUP.md  XGBOOST_IMPROVEMENTS.md  package-lock.json  start.bat  start.sh
BadDebtGuard_AI/: index.html  package-lock.json  package.json
BadDebtGuard_AI/backend/: .env  .env.example  config.py  extractor.py  llm_analyzer.py  main.py  requirements.txt
BadDebtGuard_AI/pipeline/: extractor.py  project2.py
BadDebtGuard_AI/src/: App.css  App.jsx  index.css
backend/: .env.template  .gitignore  health_check.py  pyproject.toml  requirements-minimal.txt  requirements.txt  start.bat  start.sh  test_chromadb_rag.py  test_hybrid_system.py  test_openai.py  test_xgboost_realistic.py
backend/app/: __init__.py  chromadb_rag.py  config.py  credit_scorer.py  extractor.py  fraud_detector.py  main.py  main_old.py  openai_agent.py  xgboost_predictor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
